// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default icon button correctly 1`] = `
<button
  className="src-components-button-icon__link-default src-components-button-icon__link"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  type="button"
>
  <FaClose
    className="icon-button-icon"
  />
</button>
`;

exports[`should render an inverse icon button correctly 1`] = `
<button
  className="src-components-button-icon__link-inverse src-components-button-icon__link"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  type="button"
>
  <FaClose
    className="icon-button-icon"
  />
</button>
`;

exports[`should render icon button that is aria-expanded correctly 1`] = `
<button
  aria-expanded={true}
  className="src-components-button-icon__link-default src-components-button-icon__link"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  type="button"
>
  <FaClose
    className="icon-button-icon"
  />
</button>
`;
